2009-10-01  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Removed ereg_* functions (deprecated in PHP 5.3)

2009-04-19  Dmitry Dulepov  <dmitry@typo3.org>

	* Reworked redirects module
	* Fixed problem: if default language uid is not 0 and language is not set in the URL, RealURL still used 0

2009-04-18  Dmitry Dulepov  <dmitry@typo3.org>

	* Changed layout and fields in the 'Redirects' function
	* Removed 'Clear cache' on extension update
	* Changed cHash table to use a full md5 string as URL hash. This makes less possible to create wrong cHashes.
	* Use full URL in redirects to prevent wrong redirects
	* Removed a method to find root page id by is_siteroot check
	* Fixed double call to findRootPageId() when using _DOMAINS

2009-01-28  Dmitry Dulepov  <dmitry@typo3.org>

	* Added pages_language_overlay to modified_tables to make EM happy
	* Removed hash from tx_realurl_pathcache and optimized the whole handling of this cache with additional indexes
	* Added strict mode with more checks for the configuration

2009-01-01  Dmitry Dulepov  <dmitry@typo3.org>

	* Added a call to pageNotFound and exit if incoming URL cannot be parsed

2008-12-16  Dmitry Dulepov  <dmitry@typo3.org>

	* Released version 1.5.3

2008-12-12  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed error in TCEmain hook with TYPO3 4.3
	* Fixed double slashes for the root page

2008-10-07	Dmitry Dulepov	<dmitry@typo3.org>

	* Added hooks to pre-/post-process URLs

2008-10-05	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed more issues with _DOMAINS (empty home page URL caused problems)

2008-10-02	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed bug #9376: ['_DOMAINS'] requires preVars definition
	* Fixed bug #9405: devLog() calls without debug test in class.tx_realurl_tcemain.php
	* Require PHP5 for RealURL from now on
	* Released version 1.5.2

2008-09-27	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed bug #9265: findRootPageIdByHost is used in class.tx_realurl_advanced.php but never defined